# Flask

./: app.py  models.py  pyproject.toml  settings.py
templates/: delete.html  show_post.html
